// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelMatrixLink /> should render properly when a matrix does not yet exist 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 2px solid #808080;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #3b3b3b;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #191919;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #191919;
}

.emotion-19 {
  width: 200px;
  font-style: italic;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div
    className="emotion-19"
  >
    To view the matrix, you must add test labels and train the model.
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when a matrix exists 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  opacity: 1;
  position: relative;
  border: 2px solid #808080;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
}

.emotion-5 {
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
}

.emotion-6 {
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
}

.emotion-12 {
  width: 200px;
}

.emotion-13 {
  font-weight: 700;
  padding-bottom: 16px;
}

.emotion-14 {
  font-weight: 400;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited,
.emotion-15 .noop {
  background-color: #808080;
}

.emotion-15:hover,
.emotion-15 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-15[aria-disabled=true],
.emotion-15 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-5"
      />
      <div
        className="emotion-6"
      />
      <div
        className="emotion-6"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div
    className="emotion-12"
  >
    <div
      className="emotion-13"
    >
      Confusion Matrix 
      <br />
      Overall Accuracy:
       
      <span
        className="emotion-14"
      >
        60
        %
      </span>
    </div>
    <a
      className="emotion-15"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5/matrix"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      View Matrix
    </a>
  </div>
</div>
`;

exports[`<ModelMatrixLink /> should render properly when a matrix will never exist 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  width: 130px;
  padding-right: 16px;
}

.emotion-2 {
  position: relative;
  border: 2px solid #3b3b3b;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(4, 1fr)/repeat(4, 1fr);
}

.emotion-3 {
  padding-bottom: 100%;
  background-color: #191919;
}

.emotion-3:not(:nth-of-type(4n)) {
  border-right: 1px solid #3b3b3b;
}

.emotion-3:not(:nth-of-type(n + 13)) {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-19 {
  width: 200px;
  color: #808080;
  font-style: italic;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
      <div
        className="emotion-3"
      />
    </div>
  </div>
  <div
    className="emotion-19"
  >
    A confusion matrix is not available for this model type.
  </div>
</div>
`;
